; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_bftest.c_test_bf_set_key.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_bftest.c_test_bf_set_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@key_test = common dso_local global i32 0, align 4
@key_data = common dso_local global i32 0, align 4
@BF_ENCRYPT = common dso_local global i32 0, align 4
@key_out = common dso_local global i32** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @test_bf_set_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_bf_set_key(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca [8 x i8], align 1
  store i32 %0, i32* %2, align 4
  store i32 1, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = add nsw i32 %6, 1
  %8 = load i32, i32* @key_test, align 4
  %9 = call i32 @BF_set_key(i32* %4, i32 %7, i32 %8)
  %10 = load i32, i32* @key_data, align 4
  %11 = getelementptr inbounds [8 x i8], [8 x i8]* %5, i64 0, i64 0
  %12 = load i32, i32* @BF_ENCRYPT, align 4
  %13 = call i32 @BF_ecb_encrypt(i32 %10, i8* %11, i32* %4, i32 %12)
  %14 = getelementptr inbounds [8 x i8], [8 x i8]* %5, i64 0, i64 0
  %15 = load i32**, i32*** @key_out, align 8
  %16 = load i32, i32* %2, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32*, i32** %15, i64 %17
  %19 = load i32*, i32** %18, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 0
  %21 = call i32 @TEST_mem_eq(i8* %14, i32 8, i32* %20, i32 8)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %1
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %1
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @BF_set_key(i32*, i32, i32) #1

declare dso_local i32 @BF_ecb_encrypt(i32, i8*, i32*, i32) #1

declare dso_local i32 @TEST_mem_eq(i8*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
